--- a/activitytracking/Home/templates/Auth/signin.html
+++ b/activitytracking/Home/templates/Auth/signin.html
@@ -3,35 +3,18 @@
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-9 col-lg-6 col-xl-5">
-        <img
-          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-          class="img-fluid"
-          alt="Sample image"
-        />
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid"
+          alt="Sample image" />
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form id="loginForm">
-          <div
-            class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start"
-          >
+          <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
             <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-            <button
-              type="button"
-              data-mdb-button-init
-              data-mdb-ripple-init
-              class="btn btn-primary btn-floating mx-1"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-google"
-                viewBox="0 0 16 16"
-              >
+            <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-floating mx-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google"
+                viewBox="0 0 16 16">
                 <path
-                  d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"
-                />
+                  d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z" />
               </svg>
             </button>
           </div>
@@ -42,36 +25,21 @@
 
           <!-- Email input -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <input
-              type="text"
-              id="email"
-              class="form-control form-control-lg"
-              placeholder="Enter a valid email address"
-              required
-            />
+            <input type="text" id="email" class="form-control form-control-lg" placeholder="Enter a valid email address"
+              required />
             <label class="form-label" for="email">Email address</label>
           </div>
 
           <!-- Password input -->
           <div data-mdb-input-init class="form-outline mb-3">
-            <input
-              type="password"
-              id="password"
-              class="form-control form-control-lg"
-              placeholder="Enter password"
-              required
-            />
+            <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter password"
+              required />
             <label class="form-label" for="password">Password</label>
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
-            <button
-              type="submit"
-              data-mdb-button-init
-              data-mdb-ripple-init
-              class="btn btn-primary btn-lg"
-              style="padding-left: 2.5rem; padding-right: 2.5rem"
-            >
+            <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
+              style="padding-left: 2.5rem; padding-right: 2.5rem">
               Login
             </button>
             <p class="small fw-bold mt-2 pt-1 mb-0">
@@ -108,11 +76,9 @@
 
         const data = await response.json();
         if (response.ok) {
-          // Save the access token in localStorage
           localStorage.setItem("accessToken", data.access_token);
-          alert("Login successful");
-          // Optionally, redirect the user
-          // window.location.href = '/some-url';
+          localStorage.setItem("user_id", data.user_id);
+          window.location.href = '/activity';
         } else {
           alert("Login failed: " + data.error);
         }
