--- a/activitytracking/Home/templates/Auth/signup.html
+++ b/activitytracking/Home/templates/Auth/signup.html
@@ -3,59 +3,35 @@
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-9 col-lg-6 col-xl-5">
-        <img
-          src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-          class="img-fluid"
-          alt="Sample image"
-        />
+        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid"
+          alt="Sample image" />
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form id="signupForm">
           <!-- Username input -->
           <div data-mdb-input-init class="form-outline mb-3">
-            <input
-              type="text"
-              id="username"
-              class="form-control form-control-lg"
-              placeholder="Enter Username"
-              required
-            />
+            <input type="text" id="username" class="form-control form-control-lg" placeholder="Enter Username"
+              required />
             <label class="form-label" for="username">Username</label>
           </div>
 
           <!-- Email input -->
           <div data-mdb-input-init class="form-outline mb-4">
-            <input
-              type="email"
-              id="email"
-              class="form-control form-control-lg"
-              signup
-              placeholder="Enter a valid email address"
-              required
-            />
+            <input type="email" id="email" class="form-control form-control-lg" signup
+              placeholder="Enter a valid email address" required />
             <label class="form-label" for="email">Email address</label>
           </div>
 
           <!-- Password input -->
           <div data-mdb-input-init class="form-outline mb-3">
-            <input
-              type="password"
-              id="password"
-              class="form-control form-control-lg"
-              placeholder="Enter password"
-              required
-            />
+            <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter password"
+              required />
             <label class="form-label" for="password">Password</label>
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
-            <button
-              type="submit"
-              data-mdb-button-init
-              data-mdb-ripple-init
-              class="btn btn-primary btn-lg"
-              style="padding-left: 2.5rem; padding-right: 2.5rem"
-            >
+            <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
+              style="padding-left: 2.5rem; padding-right: 2.5rem">
               Sign Up
             </button>
             <p class="small fw-bold mt-2 pt-1 mb-0">
@@ -94,9 +70,7 @@
 
         const data = await response.json();
         if (response.ok) {
-          alert("Signup successful");
-          // Optionally, redirect the user or clear the form fields
-          // window.location.href = '/some-url';
+          window.location.href = '/activity';
         } else {
           alert("Signup failed: " + data.error);
         }
