--- a/activitytracking/Home/templates/Front/index.html
+++ b/activitytracking/Home/templates/Front/index.html
@@ -1,23 +1,17 @@
 {%extends "Home/index.html"%} {%block start%}
-<div
-  style="
+<div style="
     height: 100vh;
     background-image: url(https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);
     background-size: cover;
     background-position: center;
-  "
-  class="position-relative w-100"
->
-  <div
-    class="position-absolute text-white d-flex flex-column align-items-start justify-content-center"
-    style="
+  " class="position-relative w-100">
+  <div class="position-absolute text-white d-flex flex-column align-items-start justify-content-center" style="
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
       background-color: rgba(0, 0, 0, 0.7);
-    "
-  >
+    ">
     <div class="container">
       <div class="col-md-6">
         <!-- <span style="color: #bbb" class="text-uppercase">SubHeadline</span> -->
@@ -32,12 +26,8 @@
         </p>
         <div class="mt-4">
           <!-- hover background-color: white; color: black; -->
-          <a
-            href="/auth"
-            class="btn px-5 py-3 text-white mt-3 mt-sm-0"
-            style="border-radius: 30px; background-color: #9b5de5"
-            >Get Started</a
-          >
+          <a href="/auth" class="btn px-5 py-3 text-white mt-3 mt-sm-0"
+            style="border-radius: 30px; background-color: #9b5de5">Get Started</a>
         </div>
       </div>
     </div>
