--- a/activitytracking/Home/templates/Auth/signup.html
+++ b/activitytracking/Home/templates/Auth/signup.html
@@ -70,6 +70,9 @@
 
         const data = await response.json();
         if (response.ok) {
+          localStorage.setItem("username", data.username);
+          localStorage.setItem("accessToken", data.access_token);
+          localStorage.setItem("user_id", data.user_id);
           window.location.href = '/activity';
         } else {
           alert("Signup failed: " + data.error);
