--- a/activitytracking/Home/templates/Auth/signin.html
+++ b/activitytracking/Home/templates/Auth/signin.html
@@ -76,6 +76,7 @@
 
         const data = await response.json();
         if (response.ok) {
+          localStorage.setItem("username", data.username);
           localStorage.setItem("accessToken", data.access_token);
           localStorage.setItem("user_id", data.user_id);
           window.location.href = '/activity';
