--- a/activitytracking/Home/templates/Home/index.html
+++ b/activitytracking/Home/templates/Home/index.html
@@ -27,27 +27,62 @@
           <li class="nav-item rounded">
             <a class="nav-link" href="#"><i class="bi bi-people-fill me-2"></i>About</a>
           </li>
-          <li class="nav-item rounded">
+          <!-- <li class="nav-item rounded">
             <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Set Actions</a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown rounded">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false"><i class="bi bi-person-fill me-2"></i>Profile</a>
+            <a id="myprofile" class="nav-link" href="#" role="button"><i class="bi bi-person-fill me-2"></i><span
+                id="profileName">Profile</span></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Logout</a></li>
+              <li><button class="dropdown-item" onclick="logout()">Logout</button></li>
             </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <!-- <div class="vh-100 d-flex justify-content-center align-items-center">
-            <h2>Main Content</h2>
-          </div>
-          <div class="bg-dark text-white">
-            <p class="text-center p-4 m-0">Footer Content</p>
-          </div> -->
-  {%block start%} {%endblock%}
+
+  {% block start %} {% endblock %}
+
+  <script>
+    const username = localStorage.getItem('username');
+    const profileLink = document.getElementById('myprofile');
+    const profileName = document.getElementById('profileName');
+    const dropdownMenu = profileLink.nextElementSibling;
+
+    if (username) {
+      profileLink.classList.add('dropdown-toggle');
+      profileLink.setAttribute('data-bs-toggle', 'dropdown');
+      profileName.textContent = username.toUpperCase();
+      dropdownMenu.style.display = '';
+    } else {
+      profileName.textContent = "Login";
+      profileLink.href = "/auth";
+      dropdownMenu.style.display = 'none';
+    }
+
+    const logout = () => {
+      localStorage.clear();
+
+      fetch("http://127.0.0.1:8000/logout/", {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+      })
+        .then(response => {
+          if (response.ok) {
+            window.location.href = "/";
+          } else {
+            console.error('Logout failed with status:', response.status);
+          }
+        })
+        .catch(error => {
+          console.error("There was an error logging out:", error);
+        });
+    }
+
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
